add script build-module-packages.sh to the docs, does quick build of the modules with m-a for all installed linux-headers
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1764 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,9 @@ nvidia-graphics-drivers (260.19.36-1) UNRELEASED; urgency=low
     kernels.  (Closes: #613798)
   * Depend on xorg-video-abi-8 without minor version to match what
     xserver-xorg-core provides.  (Closes: #612956)
+  * Add script build-module-packages.sh to the documentation of the
+    nvidia-kernel-source package, uses module-assistant to do a quick build of
+    the modules for all installed linux-headers.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 13 Feb 2011 18:49:21 +0100
 
