reformulate Xorg 1.9 changes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1769 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,12 +60,11 @@ nvidia-graphics-drivers (260.19.36-1) UNRELEASED; urgency=low
     later on.  (Closes: #608625)
   * Add patch nvidia-kernel-compat-2.6.38.patch to fix build with 2.6.38-rc
     kernels.  (Closes: #613798)
-  * Depend on xorg-video-abi-8 without minor version to match what
-    xserver-xorg-core provides.  (Closes: #612956)
+  * Depend on xorg-video-abi-8 without minor version (Closes: #612956) and
+    provide xorg-driver-video to match what Xorg 1.9 provides and expects.
   * Add script build-module-packages.sh to the documentation of the
     nvidia-kernel-source package, uses module-assistant to do a quick build of
     the modules for all installed linux-headers.
-  * Provide xorg-driver-video.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 13 Feb 2011 18:49:21 +0100
 
