try to work around spurious m-a failures after updating nvidia-kernel-source and forgetting m-a clean nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1783 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -67,6 +67,9 @@ nvidia-graphics-drivers (260.19.36-1) UNRELEASED; urgency=low
     the modules for all installed linux-headers.
   * Prevent concurrent installation of mismatching upstream versions of
     libgl1-nvidia-glx and libgl1-nvidia-glx-ia32.  (Closes: #614040)
+  * Catch module-assistant failures after nvidia-kernel-source updates without
+    running 'module-assistant clean nvidia'.  Only works if the old version
+    already contained this change and a module was built.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 13 Feb 2011 18:49:21 +0100
 
