--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,7 @@ nvidia-graphics-drivers (270.30-1) UNRELEASED; urgency=low
   * Update symbols control files.
   * Add package libnvidia-ml1 for the NVIDIA management library (NVML), a new
     library added by upstream.
+  * Alternatively depend on xorg-video-abi-10.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 29 Jan 2011 16:56:41 +0100
 
