--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (270.30-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (270.30-1) experimental; urgency=low
 
   * New upstream beta 270.30 (2011-03-??).
     - Added support for xserver ABI 10 (xorg-server 1.10).
@@ -51,7 +51,7 @@ nvidia-graphics-drivers (270.30-1) UNRELEASED; urgency=low
     library added by upstream.
   * Alternatively depend on xorg-video-abi-10.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Sat, 29 Jan 2011 16:56:41 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 17 Mar 2011 12:27:24 +0100
 
 nvidia-graphics-drivers (260.19.44-1) unstable; urgency=low
 
