--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
+
+  * Merge general changes from 260xx branch.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
+
 nvidia-graphics-drivers (195.36.31-7) unstable; urgency=medium
 
   * Security fix.  (Closes: #609338)
