Detect license changes by comparing debian/copyright with the shipped LICENSE during build. (branches/256.xx-experimental: r1649, r1689)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1819 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * Use dpkg-parsechangelog to extract the upstream version number from
     debian/changelog, simplifying debian/rules.defs even more.
   * Drop Conflicts: binutils-gold, driver or gold was fixed.
+  * Detect license changes by comparing debian/copyright with the shipped
+    LICENSE during build.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
