Add script build-module-packages.sh to the documentation of the nvidia-kernel-source package, uses module-assistant to do a quick build of the modules for all installed linux-headers. (branches/256.xx-experimental: r1764)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1821 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * Catch module-assistant failures after nvidia-kernel-source updates without
     running 'module-assistant clean nvidia'.  Only works if the old version
     already contained this change and a module was built.
+  * Add script build-module-packages.sh to the documentation of the
+    nvidia-kernel-source package, uses module-assistant to do a quick build of
+    the modules for all installed linux-headers.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
