conftest.h: implement new (after 195.xx) conftest.sh functions pci_dma_mapping_error, scatterlist, pci_domain_nr, file_operations, sg_init_table.  Kernel versions of symbol (dis-)appearance from lxr. (branches/256.xx-experimental: r1627, r1788, r1789)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1823 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
     removed by some old maintainer script.  Causes trouble if the destination
     directory of some diversion is missing and the diverted file is installed
     later on.
+  * conftest.h: implement new (after 195.xx) conftest.sh functions
+    pci_dma_mapping_error, scatterlist, pci_domain_nr, file_operations,
+    sg_init_table.  Kernel versions of symbol (dis-)appearance from lxr.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
