--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,27 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * conftest.h: implement new (after 195.xx) conftest.sh functions
     pci_dma_mapping_error, scatterlist, pci_domain_nr, file_operations,
     sg_init_table.  Kernel versions of symbol (dis-)appearance from lxr.
+  * Pre-Depend on nvidia-common for interactive (using debconf)
+    nvidia-installer cleanup.  There is a mutual exclusion between using the
+    nvidia-installer and the driver packages.
+    - Checks for /usr/bin/nvidia-installer and asks the user whether to run
+      'nvidia-installer --uninstall'.  If that fails, offers to just delete
+      the remaining files.  If the user chooses to do the cleanup himself,
+      installation is blocked as long as nvidia-installer is still found on
+      the system.
+    - Adds a pre-install hook for the nvidia-installer, giving a warning to
+      users running a NVIDIA-Linux-*.run file directly while Debian packages
+      providing the driver are installed.  This hook fails intentionally, but
+      unfortunately the default choice if the hook failed is to continue
+      anyway.  Therefore the hook tries to kill the nvidia-installer process.
+    - Provides a script that checks for conflicting libraries (libGL.so.*.*
+      remaining from previous usage of the nvidia-installer) and offers to
+      delete them.  The script is intended to be run from postinst.  If the
+      user chooses not to delete them, postinst configure fails as long as the
+      user has not cleaned up or lets the postinst delete the files.
+  * nvidia-glx{,-ia32}.postinst: run the cleanup of conflicting libGL.so.*.*
+    (Currently the conflicting libraries are moved to
+    /var/lib/nvidia-backup.XXXXXX instead of deleting them.)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
