Use /lib/modules/`uname -r`/build as the default kernel build location for nvidia-kernel-source instead of /usr/src/linux, since this is set up automatically by the current linux-headers-* packages. In the nvidia-kernel-source documentation, remove mention of setting KVERS, which should no longer be needed, and mention that setting KSRC is optional if the build link exists and you're building for the currently running kernel. (branches/256.xx-experimental: r1562, r1563)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1827 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,13 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * nvidia-glx{,-ia32}.postinst: run the cleanup of conflicting libGL.so.*.*
     (Currently the conflicting libraries are moved to
     /var/lib/nvidia-backup.XXXXXX instead of deleting them.)
+  * Use /lib/modules/`uname -r`/build as the default kernel build location
+    for nvidia-kernel-source instead of /usr/src/linux, since this is set
+    up automatically by the current linux-headers-* packages.
+  * In the nvidia-kernel-source documentation, remove mention of setting
+    KVERS, which should no longer be needed, and mention that setting KSRC
+    is optional if the build link exists and you're building for the
+    currently running kernel.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
