Drop the transitional packages nvidia-libvdpau{,-ia32,-dev}. (branches/256.xx-experimental: r1611)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1832 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * Drop the transitional packages libnvidia-compiler1{,-ia32}.
     Use unversioned Conflicts/Replaces in the successor packages
     libnvidia-compiler{,-ia32} to ensure the old transitionals are removed.
+  * Drop the transitional packages nvidia-libvdpau{,-ia32,-dev}.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
