--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (260.19.44-2) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 09:54:42 +0100
+
 nvidia-graphics-drivers (260.19.44-1) unstable; urgency=low
 
   [ Andreas Beckmann ]
