--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nvidia-graphics-drivers (260.19.44-2) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
+  * Let nvidia-vdpau-driver Conflicts/Replaces the obsolete transitional
+    package nvidia-libvdpau-dev.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 09:54:42 +0100
 
