Prevent concurrent installation of mismatching upstream versions of libgl1-nvidia-glx and libgl1-nvidia-glx-ia32. (branches/256.xx-experimental: r1771)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1837 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -68,6 +68,8 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
       (now Conflicts/Replaces by nvidia-vdpau-driver{,-ia32})
     - libnvidia-compiler1{,-ia32}
       (now Conflicts/Replaces by libnvidia-compiler{,-ia32}).
+  * Prevent concurrent installation of mismatching upstream versions of
+    libgl1-nvidia-glx and libgl1-nvidia-glx-ia32.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
