Add patch fix-typos.patch to fix a typo in the module (found by lintian). (branches/256.xx-experimental: r1801)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1839 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,7 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * Prevent concurrent installation of mismatching upstream versions of
     libgl1-nvidia-glx and libgl1-nvidia-glx-ia32.
   * Provide xorg-driver-video.
+  * Add patch fix-typos.patch to fix a typo in the module (found by lintian).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
 
