--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,8 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * Prevent concurrent installation of mismatching upstream versions of
     libgl1-nvidia-glx and libgl1-nvidia-glx-ia32.
   * Provide xorg-driver-video.
+  * Add patch nvidia-kernel-compat-2.6.38.patch to fix build with 2.6.38-rc
+    kernels.
   * Add patch fix-typos.patch to fix a typo in the module (found by lintian).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 18 Mar 2011 00:40:02 +0100
