--- a/debian/changelog
+++ b/debian/changelog
@@ -71,7 +71,7 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
   * Prevent concurrent installation of mismatching upstream versions of
     libgl1-nvidia-glx and libgl1-nvidia-glx-ia32.
   * Provide xorg-driver-video.
-  * Add patch nvidia-kernel-compat-2.6.38.patch to fix build with 2.6.38-rc
+  * Add patch nvidia-kernel-compat-2.6.38.patch to fix build with 2.6.38
     kernels.
   * Add patch fix-typos.patch to fix a typo in the module (found by lintian).
   * Update lintian-overrides to work with lintian 2.5.0.  Keep error overrides
