Update nv-kernel.ids for 270.41.03
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@1887 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (270.41.03-1) UNRELEASED; urgency=low
       GeForce GTX 470M, GeForce GTX 485M, GeForce GTX 550 Ti, GeForce GTX 590,
       NVS 4200M, Quadro 1000M, Quadro 2000M.
   * Upload to experimental.
+  * Update nv-kernel.ids.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 13 Apr 2011 17:28:19 +0200
 
