--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
+
+  * Update to Standards-Version: 3.9.2.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 13 Apr 2011 19:50:56 +0200
+
 nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
 
   * Merge general changes from 256xx/260xx releases:
