--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
 
   * Update to Standards-Version: 3.9.2.
+  * Add ${misc:Pre-Depends} to all library packages.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 13 Apr 2011 19:50:56 +0200
 
