--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
 
   * Update to Standards-Version: 3.9.2.
+  * Support backport specific operations in debian/rules by setting the
+    BACKPORT variable in debian/rules.defs.
+  * Set the supported Xorg ABIs in debian/rules.defs, use substvars for Xorg
+    related Depends/Provides, compute the values in debian/rules.
+    Add compatibility settings for old Xorg versions for backports only.
   * Add ${misc:Pre-Depends} to all library packages.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 13 Apr 2011 19:50:56 +0200
